[tool.poetry]
name = "scoary-2"
version = "0.0.0"
description = "Calculate assocations between genes and traits"
authors = ["MrTomRod <roder.thomas@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10"
scipy = "^1.7.3"
pandas = "^1.3.5"
cached-contingency = "^0.0.4"
biotite = "^0.31.0"
ete3 = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
