[tool.poetry]
name = "scoary-2"
version = "0.0.13"
description = "Scoary2: Associate genes with traits!"
authors = ["MrTomRod <roder.thomas@gmail.com>"]
license = "GPL3"
packages = [
    { include = "scoary" }
]
include = [
    { path = 'scoary/templates/*', format = 'sdist' }
]


[tool.poetry.scripts]
scoary2 = "scoary.scoary:main"


[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numba = "^0.55.1"
pandas = "^1.4.0"
scipy = "^1.7.3"
scikit-learn = "^1.0.2"
fast-fisher = "^0.0.4"
matplotlib = "^3.5.2"
statsmodels = "^0.13.2"
fire = "^0.4.0"


[tool.poetry.dev-dependencies]
ete3 = "^3.1.2"
biotite = "^0.32.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
