[tool.poetry]
name = "scoary-2"
version = "0.0.15"
description = "Scoary2: Associate genes with traits!"
authors = ["MrTomRod <roder.thomas@gmail.com>"]
readme = "README.md"
license = "GPL3"
packages = [
    { include = "scoary" }
]


[tool.poetry.scripts]
scoary2 = "scoary.scoary:main"
vcf2scoary = "scoary.vcf2scoary:main"


[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numba = "^0.58.0"
pandas = "^2"
scipy = "^1.7.3"
scikit-learn = "^1.0.2"
fast-fisher = "^0.0.4"
matplotlib = "^3.5.2"
statsmodels = "^0.14.0"
fire = "^0.5.0"
mgwas-data-exploration-app = "^0.1.0"


[tool.poetry.dev-dependencies]
ete3 = "^3.1.2"
biotite = "^0.38.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
